# paprikatool

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: paprika.h
scripts/: make_dmg.sh
src/: autocut.c  config.c  downloader.c  gui.c  installer.c  job.c  main.c  proc.c  thread.c  util.c
